# presence-ws

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  server.rs
static/: websocket.html
