[package]
name = "websocket-chat"
version = "0.1.0"
authors = ["Ryan Brewster <ryanpbrewster@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-chat-server"
path = "src/main.rs"

[dependencies]
actix = "0.8.1"
actix-web = "1.0.0-beta.4"
actix-web-actors = "1.0.0-beta.4"

rand = "0.6"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1.25"
tokio-io = "0.1"
env_logger = "0.6"
serde = "1.0"
serde_json = "1.0"
